--- a/app/2.ipynb
+++ b/app/2.ipynb
@@ -334,7 +334,7 @@
     "    clear_btn_p.click(clear, outputs=[cond_img_p, segm_img_p])\n",
     "\n",
     "demo.queue()\n",
-    "demo.launch()"
+    "demo.launch(share=True)"
    ]
   }
  ],
